--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             --text-light: #ffffff;
             --text-gray: #b0b0b0;
         }
-
+        
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background-color: var(--dark-bg);
@@ -75,13 +75,13 @@
 
         /* Hero Section */
         .hero {
-            min-height: 100vh;
+            min-height: 85vh;
             display: flex;
             align-items: center;
             justify-content: center;
             background: linear-gradient(135deg, rgba(233, 30, 99, 0.1), rgba(156, 39, 176, 0.1));
             text-align: center;
-            padding: 6rem 2rem 2rem;
+            padding: 5rem 2rem 2rem;
         }
 
         .hero-content h1 {
@@ -118,7 +118,7 @@
         .section {
             max-width: 1200px;
             margin: 0 auto;
-            padding: 4rem 2rem;
+            padding: 3rem 2rem;
         }
 
         .section-title {
@@ -132,33 +132,50 @@
 
         /* About */
         .about-content {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 3rem;
-            align-items: center;
+            max-width: 800px;
+            margin: 0 auto;
+            text-align: center;
+            position: relative;
+        }
+
+        .about-content::before {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 300px;
+            height: 300px;
+            background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><text y="50" font-size="80" fill="%23e91e63" opacity="0.05">💃</text></svg>') center/contain no-repeat;
+            z-index: 0;
         }
 
         .about-text {
             color: var(--text-gray);
-            font-size: 1.1rem;
+            font-size: 1.15rem;
+            line-height: 1.8;
+            position: relative;
+            z-index: 1;
         }
 
-        .about-info {
-            background: var(--card-bg);
-            padding: 2rem;
-            border-radius: 15px;
+        .about-text p {
+            margin-bottom: 1rem;
         }
 
-        .info-item {
-            display: flex;
+        .recommendation {
+            display: inline-flex;
             align-items: center;
-            gap: 1rem;
-            margin-bottom: 1.5rem;
+            gap: 0.5rem;
+            margin-top: 2rem;
+            padding: 1rem 2rem;
+            background: var(--card-bg);
+            border-radius: 50px;
+            font-size: 1rem;
         }
 
-        .info-item i {
-            color: var(--primary-color);
-            font-size: 1.5rem;
+        .recommendation i {
+            color: #ffd700;
+            font-size: 1.2rem;
         }
 
         /* Videos Grid */
@@ -183,16 +200,29 @@
         .video-thumbnail {
             width: 100%;
             height: 200px;
-            background: linear-gradient(135deg, rgba(233, 30, 99, 0.3), rgba(156, 39, 176, 0.3));
+            background: linear-gradient(135deg, rgba(233, 30, 99, 0.6), rgba(156, 39, 176, 0.6));
             display: flex;
             align-items: center;
             justify-content: center;
             position: relative;
+            background-size: cover;
+            background-position: center;
+        }
+
+        .video-thumbnail::before {
+            content: '';
+            position: absolute;
+            inset: 0;
+            background: linear-gradient(135deg, rgba(233, 30, 99, 0.4), rgba(156, 39, 176, 0.4));
+            z-index: 1;
         }
 
         .video-thumbnail i {
             font-size: 3rem;
             color: white;
+            position: relative;
+            z-index: 2;
+            filter: drop-shadow(0 4px 8px rgba(0,0,0,0.5));
         }
 
         .video-info {
@@ -407,42 +437,16 @@
     </section>
 
     <!-- About Section -->
-    <section class="section" id="nosotros">
+    <section class="section" id="nosotros" style="padding: 3rem 2rem;">
         <h2 class="section-title">Sobre Nosotros</h2>
         <div class="about-content">
             <div class="about-text">
                 <p>En <strong>Blow Dance</strong>, creemos que la danza es una forma de expresión única que trasciende edades y barreras. Nuestro espacio creativo está diseñado para que cada alumno descubra su pasión por el movimiento, desarrolle su talento artístico y se conecte con una comunidad vibrante.</p>
-                <br>
                 <p>Ofrecemos clases de danza contemporánea, hip-hop, ballet, y más, adaptadas a todos los niveles. ¡Vení a bailar con nosotros!</p>
-            </div>
-            <div class="about-info">
-                <div class="info-item">
-                    <i class="fas fa-map-marker-alt"></i>
-                    <div>
-                        <strong>Ubicación</strong><br>
-                        Erasmie 478, Oberá, Misiones 3360
-                    </div>
-                </div>
-                <div class="info-item">
-                    <i class="fas fa-phone"></i>
-                    <div>
-                        <strong>Teléfono</strong><br>
-                        +54 3755 64-6531
-                    </div>
-                </div>
-                <div class="info-item">
-                    <i class="fas fa-envelope"></i>
-                    <div>
-                        <strong>Email</strong><br>
-                        blowdanceandfitness@gmail.com
-                    </div>
-                </div>
-                <div class="info-item">
+                <div class="recommendation">
                     <i class="fas fa-star"></i>
-                    <div>
-                        <strong>Recomendación</strong><br>
-                        92% (45 opiniones)
-                    </div>
+                    <strong>92% Recomendado</strong>
+                    <span style="color: var(--text-gray);">(45 opiniones)</span>
                 </div>
             </div>
         </div>
@@ -453,7 +457,7 @@
         <h2 class="section-title">Nuestras Clases</h2>
         <div class="videos-grid">
             <a href="https://www.instagram.com/blow.dance/" target="_blank" class="video-card">
-                <div class="video-thumbnail">
+                <div class="video-thumbnail" style="background-image: url('https://images.unsplash.com/photo-1508700115892-45ecd05ae2ad?w=500&h=300&fit=crop');">
                     <i class="fas fa-play-circle"></i>
                 </div>
                 <div class="video-info">
@@ -463,7 +467,7 @@
             </a>
 
             <a href="https://www.instagram.com/blow.dance/" target="_blank" class="video-card">
-                <div class="video-thumbnail">
+                <div class="video-thumbnail" style="background-image: url('https://images.unsplash.com/photo-1545128485-c400e7702796?w=500&h=300&fit=crop');">
                     <i class="fas fa-play-circle"></i>
                 </div>
                 <div class="video-info">
@@ -473,7 +477,7 @@
             </a>
 
             <a href="https://www.youtube.com/@blowdance.espaciocreativo" target="_blank" class="video-card">
-                <div class="video-thumbnail">
+                <div class="video-thumbnail" style="background-image: url('https://images.unsplash.com/photo-1518834107812-67b0b7c58434?w=500&h=300&fit=crop');">
                     <i class="fas fa-play-circle"></i>
                 </div>
                 <div class="video-info">
@@ -483,7 +487,7 @@
             </a>
 
             <a href="https://www.youtube.com/@blowdance.espaciocreativo" target="_blank" class="video-card">
-                <div class="video-thumbnail">
+                <div class="video-thumbnail" style="background-image: url('https://images.unsplash.com/photo-1547153760-18fc86324498?w=500&h=300&fit=crop');">
                     <i class="fas fa-play-circle"></i>
                 </div>
                 <div class="video-info">
@@ -570,7 +574,7 @@
         <p>&copy; 2025 Blow Dance - Espacio Creativo. Todos los derechos reservados.</p>
         <div class="gkachele-brand">
             Diseñado y desarrollado por <span>gkachele™</span>
-        </div>
+    </div>
     </footer>
 
     <script>
