--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
             width: 600px;
             height: 600px;
             z-index: 0;
-            opacity: 0.25;
-            background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 400"><ellipse cx="200" cy="200" rx="180" ry="160" fill="none" stroke="%238B5CF6" stroke-width="3" opacity="0.8"/><ellipse cx="200" cy="200" rx="200" ry="180" fill="none" stroke="%239C88FF" stroke-width="2" opacity="0.6"/><ellipse cx="200" cy="200" rx="220" ry="200" fill="none" stroke="%236366F1" stroke-width="2" opacity="0.5"/><text x="200" y="170" font-family="Arial Black" font-size="80" font-weight="900" fill="%23EC4899" text-anchor="middle" opacity="0.3">BLOW</text><text x="200" y="240" font-family="Arial" font-size="40" fill="%23ff9800" text-anchor="middle" opacity="0.3">DANCE</text></svg>') center/contain no-repeat;
+            opacity: 0.4;
+            background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 400"><ellipse cx="200" cy="200" rx="180" ry="160" fill="none" stroke="%23ffffff" stroke-width="3" opacity="0.9"/><ellipse cx="200" cy="200" rx="200" ry="180" fill="none" stroke="%23ffffff" stroke-width="2" opacity="0.7"/><ellipse cx="200" cy="200" rx="220" ry="200" fill="none" stroke="%23ffffff" stroke-width="2" opacity="0.6"/><text x="200" y="170" font-family="Arial Black" font-size="80" font-weight="900" fill="%23ffffff" text-anchor="middle" opacity="0.4">BLOW</text><text x="200" y="240" font-family="Arial" font-size="40" fill="%23ffffff" text-anchor="middle" opacity="0.4">DANCE</text></svg>') center/contain no-repeat;
         }
 
         .hero::after {
@@ -123,8 +123,8 @@
             transform: translate(-50%, -50%);
             font-family: 'Arial', sans-serif;
             font-size: 24px;
-            color: #ff9800;
-            opacity: 0.15;
+            color: #ffffff;
+            opacity: 0.3;
             white-space: nowrap;
             z-index: 0;
             letter-spacing: 4px;
@@ -610,6 +610,10 @@
                             <span style="color: var(--text-gray);">Erasmie 478, Oberá, Misiones 3360</span>
                             <div class="contact-card-links">
                                 <a href="https://www.google.com/maps/search/?api=1&query=Erasmie+478,+Oberá,+Misiones+3360" target="_blank" title="Ver en Google Maps" style="background: var(--primary-color);"><i class="fas fa-map-marked-alt"></i></a>
+                                <a href="https://www.facebook.com/BlowDance/?locale=es_ES" target="_blank" title="Facebook"><i class="fab fa-facebook-f"></i></a>
+                                <a href="https://www.instagram.com/blow.dance/?hl=es" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
+                                <a href="https://www.youtube.com/@blowdancerule.espaciocreativo" target="_blank" title="YouTube"><i class="fab fa-youtube"></i></a>
+                                <a href="https://www.tiktok.com/@blow.dance" target="_blank" title="TikTok"><i class="fab fa-tiktok"></i></a>
                             </div>
                         </div>
                     </a>
@@ -620,6 +624,10 @@
                             <span style="color: var(--text-gray);">+54 3755 64-6531</span>
                             <div class="contact-card-links">
                                 <a href="https://wa.me/5493755646531?text=Hola!%20Quiero%20consultar%20sobre%20las%20clases" target="_blank" title="Abrir WhatsApp" style="background: #25D366;"><i class="fab fa-whatsapp"></i></a>
+                                <a href="https://www.facebook.com/BlowDance/?locale=es_ES" target="_blank" title="Facebook"><i class="fab fa-facebook-f"></i></a>
+                                <a href="https://www.instagram.com/blow.dance/?hl=es" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
+                                <a href="https://www.youtube.com/@blowdance.espaciocreativo" target="_blank" title="YouTube"><i class="fab fa-youtube"></i></a>
+                                <a href="https://www.tiktok.com/@blow.dance" target="_blank" title="TikTok"><i class="fab fa-tiktok"></i></a>
                             </div>
                         </div>
                     </a>
@@ -630,6 +638,10 @@
                             <span style="color: var(--text-gray);">blowdanceandfitness@gmail.com</span>
                             <div class="contact-card-links">
                                 <a href="mailto:blowdanceandfitness@gmail.com" title="Enviar email" style="background: var(--primary-color);"><i class="fas fa-envelope"></i></a>
+                                <a href="https://www.facebook.com/BlowDance/?locale=es_ES" target="_blank" title="Facebook"><i class="fab fa-facebook-f"></i></a>
+                                <a href="https://www.instagram.com/blow.dance/?hl=es" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
+                                <a href="https://www.youtube.com/@blowdance.espaciocreativo" target="_blank" title="YouTube"><i class="fab fa-youtube"></i></a>
+                                <a href="https://www.tiktok.com/@blow.dance" target="_blank" title="TikTok"><i class="fab fa-tiktok"></i></a>
                             </div>
                         </div>
                     </a>
@@ -638,6 +650,12 @@
                         <div style="flex: 1;">
                             <strong>Horarios</strong><br>
                             <span style="color: var(--text-gray);">Lun - Sáb: Consultar por WhatsApp</span>
+                            <div class="contact-card-links">
+                                <a href="https://www.facebook.com/BlowDance/?locale=es_ES" target="_blank" title="Facebook"><i class="fab fa-facebook-f"></i></a>
+                                <a href="https://www.instagram.com/blow.dance/?hl=es" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
+                                <a href="https://www.youtube.com/@blowdance.espaciocreativo" target="_blank" title="YouTube"><i class="fab fa-youtube"></i></a>
+                                <a href="https://www.tiktok.com/@blow.dance" target="_blank" title="TikTok"><i class="fab fa-tiktok"></i></a>
+                            </div>
                         </div>
                     </div>
                 </div>
