Fix: links clickeables en tarjetas, preview de videos en admin

--- a/index.html
+++ b/index.html
@@ -607,12 +607,12 @@
                         <i class="fas fa-map-marker-alt"></i>
                         <div style="flex: 1;">
                             <strong>Dirección</strong><br>
-                            <span style="color: var(--text-gray);">Erasmie 478, Oberá, Misiones 3360</span>
+                            <a href="https://www.google.com/maps/search/?api=1&query=Erasmie+478,+Oberá,+Misiones+3360" target="_blank" style="color: var(--text-gray); text-decoration: none;">Erasmie 478, Oberá, Misiones 3360</a>
                             <div class="contact-card-links">
                                 <a href="https://www.google.com/maps/search/?api=1&query=Erasmie+478,+Oberá,+Misiones+3360" target="_blank" title="Ver en Google Maps" style="background: var(--primary-color);"><i class="fas fa-map-marked-alt"></i></a>
                                 <a href="https://www.facebook.com/BlowDance/?locale=es_ES" target="_blank" title="Facebook"><i class="fab fa-facebook-f"></i></a>
                                 <a href="https://www.instagram.com/blow.dance/?hl=es" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
-                                <a href="https://www.youtube.com/@blowdancerule.espaciocreativo" target="_blank" title="YouTube"><i class="fab fa-youtube"></i></a>
+                                <a href="https://www.youtube.com/@blowdance.espaciocreativo" target="_blank" title="YouTube"><i class="fab fa-youtube"></i></a>
                                 <a href="https://www.tiktok.com/@blow.dance" target="_blank" title="TikTok"><i class="fab fa-tiktok"></i></a>
                             </div>
                         </div>
@@ -621,7 +621,7 @@
                         <i class="fab fa-whatsapp"></i>
                         <div style="flex: 1;">
                             <strong>WhatsApp</strong><br>
-                            <span style="color: var(--text-gray);">+54 3755 64-6531</span>
+                            <a href="https://wa.me/5493755646531?text=Hola!%20Quiero%20consultar%20sobre%20las%20clases" target="_blank" style="color: var(--text-gray); text-decoration: none;">+54 3755 64-6531</a>
                             <div class="contact-card-links">
                                 <a href="https://wa.me/5493755646531?text=Hola!%20Quiero%20consultar%20sobre%20las%20clases" target="_blank" title="Abrir WhatsApp" style="background: #25D366;"><i class="fab fa-whatsapp"></i></a>
                                 <a href="https://www.facebook.com/BlowDance/?locale=es_ES" target="_blank" title="Facebook"><i class="fab fa-facebook-f"></i></a>
@@ -635,7 +635,7 @@
                         <i class="fas fa-envelope"></i>
                         <div style="flex: 1;">
                             <strong>Email</strong><br>
-                            <span style="color: var(--text-gray);">blowdanceandfitness@gmail.com</span>
+                            <a href="mailto:blowdanceandfitness@gmail.com" style="color: var(--text-gray); text-decoration: none;">blowdanceandfitness@gmail.com</a>
                             <div class="contact-card-links">
                                 <a href="mailto:blowdanceandfitness@gmail.com" title="Enviar email" style="background: var(--primary-color);"><i class="fas fa-envelope"></i></a>
                                 <a href="https://www.facebook.com/BlowDance/?locale=es_ES" target="_blank" title="Facebook"><i class="fab fa-facebook-f"></i></a>
