--- a/index.html
+++ b/index.html
@@ -349,13 +349,13 @@
         }
 
         .contact-card-links a:hover {
-            transform: scale(1.1);
+            transform: scale(1.15);
         }
 
-        .contact-card-links .fa-facebook:hover { background: #1877F2; }
-        .contact-card-links .fa-instagram:hover { background: linear-gradient(45deg, #f09433, #e6683c, #dc2743, #cc2366, #bc1888); }
-        .contact-card-links .fa-youtube:hover { background: #FF0000; }
-        .contact-card-links .fa-tiktok:hover { background: #000000; }
+        .contact-card-links a:hover .fa-facebook-f { color: #1877F2; }
+        .contact-card-links a:hover .fa-instagram { color: #E4405F; }
+        .contact-card-links a:hover .fa-youtube { color: #FF0000; }
+        .contact-card-links a:hover .fa-tiktok { color: #000000; }
 
         .qr-container {
             background: var(--card-bg);
@@ -603,48 +603,54 @@
         <div class="contact-grid">
             <div class="contact-left">
                 <div class="contact-info">
-                    <a href="https://www.google.com/maps/search/?api=1&query=Erasmie+478,+Oberá,+Misiones+3360" target="_blank" class="contact-card" style="text-decoration: none; color: inherit;">
+                    <div class="contact-card">
                         <i class="fas fa-map-marker-alt"></i>
                         <div style="flex: 1;">
                             <strong>Dirección</strong><br>
-                            <a href="https://www.google.com/maps/search/?api=1&query=Erasmie+478,+Oberá,+Misiones+3360" target="_blank" style="color: var(--text-gray); text-decoration: none;">Erasmie 478, Oberá, Misiones 3360</a>
+                            <a href="https://www.google.com/maps/search/?api=1&query=Erasmie+478,+Oberá,+Misiones+3360" target="_blank" style="color: var(--text-gray); text-decoration: none;">
+                                Erasmie 478, Oberá, Misiones 3360
+                            </a>
                             <div class="contact-card-links">
-                                <a href="https://www.google.com/maps/search/?api=1&query=Erasmie+478,+Oberá,+Misiones+3360" target="_blank" title="Ver en Google Maps" style="background: var(--primary-color);"><i class="fas fa-map-marked-alt"></i></a>
                                 <a href="https://www.facebook.com/BlowDance/?locale=es_ES" target="_blank" title="Facebook"><i class="fab fa-facebook-f"></i></a>
                                 <a href="https://www.instagram.com/blow.dance/?hl=es" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
                                 <a href="https://www.youtube.com/@blowdance.espaciocreativo" target="_blank" title="YouTube"><i class="fab fa-youtube"></i></a>
                                 <a href="https://www.tiktok.com/@blow.dance" target="_blank" title="TikTok"><i class="fab fa-tiktok"></i></a>
                             </div>
                         </div>
-                    </a>
-                    <a href="https://wa.me/5493755646531?text=Hola!%20Quiero%20consultar%20sobre%20las%20clases" target="_blank" class="contact-card" style="text-decoration: none; color: inherit;">
+                    </div>
+
+                    <div class="contact-card">
                         <i class="fab fa-whatsapp"></i>
                         <div style="flex: 1;">
                             <strong>WhatsApp</strong><br>
-                            <a href="https://wa.me/5493755646531?text=Hola!%20Quiero%20consultar%20sobre%20las%20clases" target="_blank" style="color: var(--text-gray); text-decoration: none;">+54 3755 64-6531</a>
+                            <a href="https://wa.me/5493755646531?text=Hola!%20Quiero%20consultar%20sobre%20las%20clases" target="_blank" style="color: var(--text-gray); text-decoration: none;">
+                                +54 3755 64-6531
+                            </a>
                             <div class="contact-card-links">
-                                <a href="https://wa.me/5493755646531?text=Hola!%20Quiero%20consultar%20sobre%20las%20clases" target="_blank" title="Abrir WhatsApp" style="background: #25D366;"><i class="fab fa-whatsapp"></i></a>
                                 <a href="https://www.facebook.com/BlowDance/?locale=es_ES" target="_blank" title="Facebook"><i class="fab fa-facebook-f"></i></a>
                                 <a href="https://www.instagram.com/blow.dance/?hl=es" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
                                 <a href="https://www.youtube.com/@blowdance.espaciocreativo" target="_blank" title="YouTube"><i class="fab fa-youtube"></i></a>
                                 <a href="https://www.tiktok.com/@blow.dance" target="_blank" title="TikTok"><i class="fab fa-tiktok"></i></a>
                             </div>
                         </div>
-                    </a>
-                    <a href="mailto:blowdanceandfitness@gmail.com" class="contact-card" style="text-decoration: none; color: inherit;">
+                    </div>
+
+                    <div class="contact-card">
                         <i class="fas fa-envelope"></i>
                         <div style="flex: 1;">
                             <strong>Email</strong><br>
-                            <a href="mailto:blowdanceandfitness@gmail.com" style="color: var(--text-gray); text-decoration: none;">blowdanceandfitness@gmail.com</a>
+                            <a href="mailto:blowdanceandfitness@gmail.com" style="color: var(--text-gray); text-decoration: none;">
+                                blowdanceandfitness@gmail.com
+                            </a>
                             <div class="contact-card-links">
-                                <a href="mailto:blowdanceandfitness@gmail.com" title="Enviar email" style="background: var(--primary-color);"><i class="fas fa-envelope"></i></a>
                                 <a href="https://www.facebook.com/BlowDance/?locale=es_ES" target="_blank" title="Facebook"><i class="fab fa-facebook-f"></i></a>
                                 <a href="https://www.instagram.com/blow.dance/?hl=es" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
                                 <a href="https://www.youtube.com/@blowdance.espaciocreativo" target="_blank" title="YouTube"><i class="fab fa-youtube"></i></a>
                                 <a href="https://www.tiktok.com/@blow.dance" target="_blank" title="TikTok"><i class="fab fa-tiktok"></i></a>
                             </div>
                         </div>
-                    </a>
+                    </div>
+
                     <div class="contact-card">
                         <i class="fas fa-clock"></i>
                         <div style="flex: 1;">
